<resources>
    <string name="app_name">Incident Reporting</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_signIn">Email</string>
    <string name="password_signIn">Password</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="user_name">User name</string>
    <string name="create_user">Create User</string>
    <string name="forgot_password_inst">Please enter you registered email address so that you password will be update there.</string>
    <string name="update_password">Update Password</string>
    <string name="home">Home</string>
    <string name="timeline">Timeline</string>
    <string name="muhammad_imtiaz">Muhammad Imtiaz</string>
    <string name="incident_des">Say something about incident</string>
    <string name="nearby_authorty">Select Nearby Authorthy</string>
    <string name="_3_nov_2018">3 Nov. 2018</string>
    <string name="post">Post</string>
    <string name="incident_type">Incident Type</string>
    <string name="views">Views</string>
    <string name="comments">Comments</string>
    <string name="profile">Profile</string>
    <string name="locals">Languages</string>
    <string name="themes">Themes</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="status">Hi, there!...</string>
    <string name="profile_guideline">This name and status will be visible to you and others.</string>
    <string name="fancy_name">Add your fancy name here</string>
    <string name="name_guideline">This username will be shown to your profile and others.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="status_guideline">Say something about yourself</string>
    <string name="status_guidelines">This status will be shown on your profile and others.</string>
    <string name="update">Update</string>
    <string name="oldemail">Old email</string>
    <string name="change">Change</string>
    <string name="new_email">New email</string>
    <string name="discard_message">Are you sure to discard the post?</string>
    <string name="discard">Discard</string>
    <string name="exit_message">Are you sure to Exit?</string>
    <string name="exit">Exit</string>

    <!--google maps api key-->
    <string name="google_maps_key">AIzaSyB9EQl6VKcz3-NBj21OJnajMMxQjdFi1jI</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="remember_me">Remember Me</string>
    <string name="localsSelection">Select your language</string>
</resources>

