<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.SignIn"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_textInputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="32dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/email_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_signIn"
            android:inputType="textEmailAddress" />

        <requestFocus />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_textInputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_textInputlayout"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_signIn"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/rememberMe_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_textInputlayout"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="32dp" />

    <Button
        android:id="@+id/signBtn_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rememberMe_signIn"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/next_button"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/fogotPass_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signBtn_signIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorSplashScreen"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/rememberMe_signIn"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="6dp"
        android:text="@string/remember_me"
        android:textSize="16sp" />

</RelativeLayout>