<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.SignUp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="40dp"
        android:id="@+id/username_TextInputLayout_signUp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/username_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/username_TextInputLayout_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_textInputlayout_signup"
        android:layout_marginTop="20dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_signIn"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_textInputlayout_signUp"
        android:layout_below="@id/password_textInputlayout_signup"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="20dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/email_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_signUp"
            android:hint="@string/email_signIn"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/button_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_textInputlayout_signUp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/verify_now_button"
        android:text="@string/create_user"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>