<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.Settings"
    android:fillViewport="true">


    <LinearLayout
        android:id="@+id/setting_fragment_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/settings">

        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/profileSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true">

            <ImageView
                android:id="@+id/imageIconSetting"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="20dp"
                android:adjustViewBounds="false"
                android:src="@drawable/ic_account_circle" />

            <TextView
                android:id="@+id/nameSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="115dp"
                android:layout_marginTop="10dp"
                android:text="@string/muhammad_imtiaz"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/status_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameSetting"
                android:layout_marginLeft="115dp"
                android:text="@string/status"
                android:layout_marginTop="8dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/imageIconSetting"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_settings"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_person_profile"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/profile"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/profile_settings"
                android:background="?android:attr/listDivider" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/local_settings"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/ic_language"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/locals"
                android:textSize="18sp"
                android:clickable="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/local_settings"
                android:background="?android:attr/listDivider" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/theme_settings"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/ic_themes"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/themes"
                android:textSize="18sp"
                android:clickable="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/theme_settings"
                android:background="?android:attr/listDivider" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/help_settings"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/ic_help_profile"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/help"
                android:textSize="18sp"
                android:clickable="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/help_settings"
                android:background="?android:attr/listDivider" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about_settings"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/ic_about_profile"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/about"
                android:textSize="18sp"
                android:clickable="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/about_settings"
                android:background="?android:attr/listDivider" />
        </LinearLayout>



    </LinearLayout>
</ScrollView>