<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:elevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/top_singlePost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/image_thumbnail_singlePost"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/imtiaz" />

                <TextView
                    android:id="@+id/name_singlePost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_toRightOf="@+id/image_thumbnail_singlePost"
                    android:text="@string/muhammad_imtiaz"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/date_singlePost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="35dp"
                    android:layout_toRightOf="@id/image_thumbnail_singlePost"
                    android:textColor="@color/colorLightBlack"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/type_singlePost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/incident_type"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:id="@+id/description_singlePost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/top_singlePost"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:inputType="textMultiLine"
                android:text="@string/incident_des"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/image_incident_singlePost"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_below="@id/description_singlePost"
                android:scaleType="centerCrop"
                android:src="@drawable/imtiaz" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_incident_singlePost"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:drawableLeft="@drawable/ic_views"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="@string/views"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/comments_singlePost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="57dp"
                    android:drawableLeft="@drawable/ic_comment"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="@string/comments"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>